--- a/.github/workflows/compose-ec2.yml
+++ b/.github/workflows/compose-ec2.yml
@@ -29,5 +29,5 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ubuntu@3.27.186.65 << 'EOF'
             cd /home/ubuntu/githubaction-python
-            docker compose -f up -d
+            docker compose -f ./python/compose.yml up -d
           EOF
