--- a/.github/workflows/latihan-compose.yml
+++ b/.github/workflows/latihan-compose.yml
@@ -3,10 +3,10 @@ name: Docker Compose CI
 on:
   push:
     branches:
-      - main
-  pull_request:
-    branches:
-      - main
+      - UAT  # Hanya memicu workflow jika ada perubahan di branch UAT
+    paths:
+      - 'path/to/latihan-compose.yml'  # Pastikan path ini sesuai dengan lokasi file yang kamu ubah
+
 
 jobs:
   docker-compose:
