--- a/.github/workflows/latihan-compose.yml
+++ b/.github/workflows/latihan-compose.yml
@@ -18,6 +18,10 @@ jobs:
       # Checkout repository
       - name: Checkout code
         uses: actions/checkout@v3
+        
+      # Pull the latest changes (optional, because checkout sudah melakukannya)
+    -   name: Auto Pull latest changes
+        run: git pull origin UAT
 
       # Set up Docker
       - name: Set up Docker Buildx
