--- a/.github/workflows/compose-ec2.yml
+++ b/.github/workflows/compose-ec2.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Deploy to EC2 using Docker Compose
         run: |
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ubuntu@13.239.1.142 << 'EOF'
+            cd /home/ubuntu/github-action-alzi
+            git checkout EC2
+            git pull
             cd /home/ubuntu/githubaction-python
             sudo docker compose -f ./compose.yml up -d
           EOF
