--- a/.github/workflows/compose-ec2.yml
+++ b/.github/workflows/compose-ec2.yml
@@ -37,3 +37,13 @@ jobs:
             cd /home/ubuntu/githubaction-python
             sudo docker compose -f ./compose.yml up -d
           EOF
+          
+      # Check status of containers (optional)
+      - name: List running containers
+        run: |
+           sudo docker ps
+
+      # (Optional) Clean up and stop containers
+      - name: Stop and remove containers
+        run: |
+            sudo docker compose -f ./python/compose.yml down
