--- a/.github/workflows/latihan-compose.yml
+++ b/.github/workflows/latihan-compose.yml
@@ -33,5 +33,6 @@ jobs:
         run: docker ps
 
       # (Optional) Clean up and stop containers
+      #tes asd
       - name: Stop and remove containers
         run: docker compose -f ./python/compose.yml down
