--- a/.github/workflows/compose-ec2.yml
+++ b/.github/workflows/compose-ec2.yml
@@ -19,13 +19,13 @@ jobs:
         run: |
           echo "Setting up SSH key"
           mkdir -p ~/.ssh
-          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
+          echo "${{ secrets.GCP_ALZI }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H 10.128.0.3 >> ~/.ssh/known_hosts
           # Cek isi file dan permissions untuk troubleshooting
           ls -l ~/.ssh
         env:
-          EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
+          GCP_ALZI: ${{ secrets.GCP_ALZI }}
 
       # Jalankan Docker Compose di EC2 melalui SSH
       - name: Deploy to EC2 using Docker Compose
