--- a/.github/workflows/compose-ec2.yml
+++ b/.github/workflows/compose-ec2.yml
@@ -25,3 +25,13 @@ jobs:
           ls -l ~/.ssh/known_hosts
         env:
           GCP_ALZI: ${{ secrets.GCP_ALZI }}
+
+# Jalankan Docker Compose di EC2 melalui SSH
+      - name: Deploy to EC2 using Docker Compose
+        run: |
+          echo "Connecting to EC2 instance"
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ubuntu@10.128.0.3 << 'EOF'
+          echo 'Hallo'
+          cd /home/ubuntu/githubaction-python
+          sudo docker compose -f ./compose.yml up -d
+          EOF
