--- a/.github/workflows/compose-ec2.yml
+++ b/.github/workflows/compose-ec2.yml
@@ -32,6 +32,8 @@ jobs:
           echo "Connecting to EC2 instance"
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa aljisaptiadi@34.31.192.61 << 'EOF'
           echo 'Hallo'
+          sudo su
+          scp -r ./my-app aljisaptiadi@34.31.192.61:/home/aljisaptiadi/react-js
           EOF
 #  cd /home/ubuntu/githubaction-python
 #  sudo docker compose -f ./compose.yml up -d
