--- a/.github/workflows/compose-ec2.yml
+++ b/.github/workflows/compose-ec2.yml
@@ -1,4 +1,4 @@
-name: Deploy to EC2 using Docker Compose
+name: Deploy to GCP using Docker Compose
 
 on:
   push:
@@ -13,24 +13,15 @@ jobs:
       - name: Set up SSH key
         run: |
           echo "Setting up SSH key"
-          set -x  
+          set -x
           mkdir -p ~/.ssh
-          ls -ld ~/.ssh
-
           echo "${{ secrets.GCP_ALZI }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ls -l ~/.ssh
-
           ssh-keyscan -H 34.31.192.61 >> ~/.ssh/known_hosts
-          ls -l ~/.ssh/known_hosts
         env:
           GCP_ALZI: ${{ secrets.GCP_ALZI }}
 
-# Jalankan Docker Compose di EC2 melalui SSH tes
-      - name: Deploy to EC2 using Docker Compose
+      - name: Deploy to GCP using SCP
         run: |
-          echo "Connecting to EC2 instance"
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa aljisaptiadi@34.31.192.61 << 'EOF'
-          echo 'Hallo'
-          scp -r ./my-app aljisaptiadi@34.31.192.61:/home/aljisaptiadi/react-js
-          EOF
+          echo "Connecting to GCP instance"
+          scp -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa -r ./my-app aljisaptiadi@34.31.192.61:/home/aljisaptiadi/react-js
