--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,8 +11,11 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "6",
-    "react-scripts": "^3.0.1",
-    "web-vitals": "^2.1.0"
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^2.1.0",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
