--- a/.github/workflows/compose-ec2.yml
+++ b/.github/workflows/compose-ec2.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Create React .env file
         run: |
           echo "Creating .env file for React app"
-          echo "REACT_APP_API_URL=http://34.46.29.47:5000/api" > my-app/.env
+          echo "REACT_APP_API_URL=https://alzibe.sanbercode.com/api" > my-app/.env
 
       # SCP file dari GitHub ke GCP
       - name: Deploy to GCP using SCP
@@ -44,9 +44,9 @@ jobs:
           cd /home/aljisaptiadi/react-app
           docker stop react-app;docker rm react-app;docker rmi react-app
           docker build -t react-app .
-          docker run --name react-app -d -p 3000:3000 react-app
+          docker run --name react-app -d -p 8082:3000 react-app
           echo 'Restart Nodejs'
           cd /home/aljisaptiadi/node-app
           docker stop node-app;docker rm node-app;docker rmi node-app
           docker build -t node-app .
-          docker run --name node-app -d -p 5000:5000 node-app
+          docker run --name node-app -d -p 8083:5000 node-app
